kubernetes/base/monitoring/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemonset
spec:
  selector:
    matchLabels:
      name: promtail-daemonset
  template:
    metadata:
      labels:
        name: promtail-daemonset
    spec:
      serviceAccountName: promtail-service-account
      containers:
        - name: promtail
          image: grafana/promtail:2.8.3
          args:
            - "-config.file=/etc/promtail/promtail.yaml"
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail
            - name: promtail-run
              mountPath: /run/promtail
            - name: containers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
          ports:
            - name: http-metrics
              containerPort: 3101
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: '/ready'
              port: http-metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: promtail-run
          hostPath:
            path: /run/promtail
        - name: containers
          hostPath:
            path: /var/lib/docker/containers
        - name: pods
          hostPath:
            path: /var/log/pods
---
