kubernetes/base/monitoring/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: monitoring-ingress
spec:
  rules:
    - host: grafana-host
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
